Open the `com.sun.tools.javac.parser` module